--- a/darkmode.css
+++ b/darkmode.css
@@ -51,3 +51,26 @@ QSpinBox{
     Background: transparent;
     color: #b5b5b5;
 }
+
+QGroupBox{
+    color: black;
+    margin-top: 5px;
+    font-weight: bold;
+    border: 3px solid black;
+    border-radius: 10px;
+    background-color: #7c7c7c;
+}
+
+QGroupBox::checked{
+    border: 2px solid black;
+    border-radius: 7px;
+}
+
+QCheckBox{
+    color: #b5b5b5;
+}
+
+QCheckBox::indicator {
+     width: 27px;
+     height: 27px;
+}
