--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -30,15 +30,21 @@
         <bold>true</bold>
        </font>
       </property>
+      <property name="accessibleName">
+       <string>Einstellungen</string>
+      </property>
+      <property name="accessibleDescription">
+       <string>Einstellungen</string>
+      </property>
       <property name="tabShape">
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="Sound_Tab">
        <attribute name="title">
-        <string>Sound</string>
+        <string>Ton</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,0">
         <property name="sizeConstraint">
@@ -67,7 +73,10 @@
              </font>
             </property>
             <property name="text">
-             <string>Volume</string>
+             <string>Lautstärke</string>
+            </property>
+            <property name="textInteractionFlags">
+             <set>Qt::LinksAccessibleByMouse</set>
             </property>
            </widget>
           </item>
@@ -416,10 +425,53 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>TextLabel</string>
+         <widget class="QStackedWidget" name="stackedWidget">
+          <property name="currentIndex">
+           <number>0</number>
           </property>
+          <widget class="QWidget" name="Profil_page">
+           <layout class="QGridLayout" name="gridLayout" rowminimumheight="0,0">
+            <item row="0" column="0">
+             <widget class="QScrollArea" name="scrollArea">
+              <property name="verticalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOff</enum>
+              </property>
+              <property name="horizontalScrollBarPolicy">
+               <enum>Qt::ScrollBarAlwaysOff</enum>
+              </property>
+              <property name="widgetResizable">
+               <bool>true</bool>
+              </property>
+              <widget class="QWidget" name="scrollAreaWidgetContents">
+               <property name="geometry">
+                <rect>
+                 <x>0</x>
+                 <y>0</y>
+                 <width>406</width>
+                 <height>203</height>
+                </rect>
+               </property>
+               <layout class="QGridLayout" name="gridLayout_2"/>
+              </widget>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QPushButton" name="pushButton">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>35</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Neues Profil aus aktuellen Einstellungen</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="new_profile_page"/>
+          <widget class="QWidget" name="edit_profile_page"/>
          </widget>
         </item>
        </layout>
@@ -429,7 +481,7 @@
         <string>Einstellungen</string>
        </property>
        <attribute name="icon">
-        <iconset resource="UI-Resources.qrc">
+        <iconset>
          <normaloff>:/Icons/settings_icon_176440.png</normaloff>:/Icons/settings_icon_176440.png</iconset>
        </attribute>
        <attribute name="title">
@@ -458,15 +510,16 @@
            </font>
           </property>
           <property name="text">
-           <string>Lightmode</string>
+           <string>Heller Modus</string>
           </property>
           <property name="icon">
-           <iconset theme="applications-engineering"/>
+           <iconset theme="applications-engineering">
+            <normaloff>.</normaloff>.</iconset>
           </property>
           <property name="iconSize">
            <size>
-            <width>50</width>
-            <height>50</height>
+            <width>20</width>
+            <height>20</height>
            </size>
           </property>
          </widget>
@@ -480,15 +533,16 @@
            </font>
           </property>
           <property name="text">
-           <string>Darkmode</string>
+           <string>Dunkler Modus</string>
           </property>
           <property name="icon">
-           <iconset theme="applications-engineering"/>
+           <iconset theme="applications-engineering">
+            <normaloff>.</normaloff>.</iconset>
           </property>
           <property name="iconSize">
            <size>
-            <width>50</width>
-            <height>50</height>
+            <width>20</width>
+            <height>20</height>
            </size>
           </property>
           <property name="checked">
@@ -565,12 +619,12 @@
    <slot>stepDown()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>90</x>
-     <y>384</y>
+     <x>99</x>
+     <y>311</y>
     </hint>
     <hint type="destinationlabel">
-     <x>84</x>
-     <y>349</y>
+     <x>93</x>
+     <y>289</y>
     </hint>
    </hints>
   </connection>
@@ -581,12 +635,12 @@
    <slot>stepDown()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>391</x>
-     <y>403</y>
+     <x>432</x>
+     <y>311</y>
     </hint>
     <hint type="destinationlabel">
-     <x>386</x>
-     <y>375</y>
+     <x>432</x>
+     <y>289</y>
     </hint>
    </hints>
   </connection>
@@ -597,12 +651,12 @@
    <slot>stepUp()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>137</x>
-     <y>128</y>
+     <x>146</x>
+     <y>107</y>
     </hint>
     <hint type="destinationlabel">
-     <x>132</x>
-     <y>155</y>
+     <x>141</x>
+     <y>144</y>
     </hint>
    </hints>
   </connection>
@@ -613,12 +667,12 @@
    <slot>stepUp()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>246</x>
-     <y>322</y>
+     <x>432</x>
+     <y>252</y>
     </hint>
     <hint type="destinationlabel">
-     <x>426</x>
-     <y>375</y>
+     <x>432</x>
+     <y>289</y>
     </hint>
    </hints>
   </connection>
@@ -629,12 +683,12 @@
    <slot>stepDown()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>184</x>
-     <y>198</y>
+     <x>193</x>
+     <y>166</y>
     </hint>
     <hint type="destinationlabel">
-     <x>172</x>
-     <y>161</y>
+     <x>181</x>
+     <y>144</y>
     </hint>
    </hints>
   </connection>
@@ -645,12 +699,12 @@
    <slot>stepUp()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>109</x>
-     <y>319</y>
+     <x>118</x>
+     <y>252</y>
     </hint>
     <hint type="destinationlabel">
-     <x>101</x>
-     <y>342</y>
+     <x>110</x>
+     <y>289</y>
     </hint>
    </hints>
   </connection>
