--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -450,16 +450,30 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>406</width>
-                 <height>509</height>
+                 <width>388</width>
+                 <height>474</height>
                 </rect>
                </property>
-               <layout class="QGridLayout" name="gridLayout_2"/>
+               <layout class="QGridLayout" name="gridLayout_2">
+                <item row="0" column="0">
+                 <spacer name="verticalSpacer_4">
+                  <property name="orientation">
+                   <enum>Qt::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </widget>
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="profil_from_currentsettings_button">
               <property name="minimumSize">
                <size>
                 <width>0</width>
@@ -472,8 +486,112 @@
              </widget>
             </item>
            </layout>
+           <zorder>profil_from_currentsettings_button</zorder>
+           <zorder>scrollArea</zorder>
           </widget>
-          <widget class="QWidget" name="new_profile_page"/>
+          <widget class="QWidget" name="new_profile_page">
+           <layout class="QVBoxLayout" name="verticalLayout_7">
+            <item>
+             <spacer name="verticalSpacer_3">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QLabel" name="new_profile_label">
+              <property name="font">
+               <font>
+                <pointsize>20</pointsize>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>Profil-Name:</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="new_profile_lineEdit">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="new_profile_button">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>Neues Profil erstellen</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="new_profile_volume_label">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>Volume: </string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="new_profile_Bew_Freq_label">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>Frequenz-Bewegend:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="new_profile_Still_Freq_label">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="text">
+               <string>Frequenz-Stillstehend: </string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
           <widget class="QWidget" name="edit_profile_page"/>
          </widget>
         </item>
