--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -102,7 +102,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
             <property name="iconSize">
@@ -177,7 +177,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -185,7 +185,7 @@
          </layout>
         </item>
         <item>
-         <layout class="QGridLayout" name="Sound_Layout" rowstretch="7,7,10,7,10,0,0" columnstretch="0,0">
+         <layout class="QGridLayout" name="Sound_Layout" rowstretch="7,7,10,7,10" columnstretch="0,0">
           <property name="sizeConstraint">
            <enum>QLayout::SetMaximumSize</enum>
           </property>
@@ -210,7 +210,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
@@ -241,7 +241,7 @@
              </font>
             </property>
             <property name="text">
-             <string>Ton-Frequenz</string>
+             <string>Tonfrequenz</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
@@ -331,7 +331,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
@@ -351,7 +351,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -423,7 +423,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="UI-Resources.qrc">
+             <iconset>
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -480,7 +480,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>402</width>
-                 <height>403</height>
+                 <height>424</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -673,7 +673,7 @@
         <string>Einstellungen</string>
        </property>
        <attribute name="icon">
-        <iconset resource="UI-Resources.qrc">
+        <iconset>
          <normaloff>:/Icons/settingsIcon_inverted.png</normaloff>:/Icons/settingsIcon_inverted.png</iconset>
        </attribute>
        <attribute name="title">
@@ -803,9 +803,7 @@
    </layout>
   </widget>
  </widget>
- <resources>
-  <include location="UI-Resources.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>Von_Frequ_Down</sender>
