--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -40,7 +40,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="Sound_Tab">
        <attribute name="title">
@@ -102,7 +102,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
             <property name="iconSize">
@@ -177,7 +177,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -210,7 +210,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
@@ -331,7 +331,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_Up_inverted.png</normaloff>:/Icons/Chevron_Up_inverted.png</iconset>
             </property>
            </widget>
@@ -351,7 +351,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -423,7 +423,7 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset>
+             <iconset resource="UI-Resources.qrc">
               <normaloff>:/Icons/Chevron_down_inverted.png</normaloff>:/Icons/Chevron_down_inverted.png</iconset>
             </property>
            </widget>
@@ -480,7 +480,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>402</width>
-                 <height>424</height>
+                 <height>403</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -673,7 +673,7 @@
         <string>Einstellungen</string>
        </property>
        <attribute name="icon">
-        <iconset>
+        <iconset resource="UI-Resources.qrc">
          <normaloff>:/Icons/settingsIcon_inverted.png</normaloff>:/Icons/settingsIcon_inverted.png</iconset>
        </attribute>
        <attribute name="title">
@@ -749,6 +749,23 @@
          </widget>
         </item>
         <item>
+         <widget class="QListWidget" name="UIDeviceList"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="searchKlingelball">
+          <property name="text">
+           <string>Klingelball suchen</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="connectKlingelball">
+          <property name="text">
+           <string>Klingelball verbinden</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -803,7 +820,9 @@
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="UI-Resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>Von_Frequ_Down</sender>
