--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -459,7 +459,7 @@
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="Profil_page">
            <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0" rowminimumheight="0,0,0">
@@ -749,10 +749,37 @@
          </widget>
         </item>
         <item>
-         <widget class="QListWidget" name="UIDeviceList"/>
+         <widget class="QListWidget" name="UIDeviceList">
+          <property name="currentRow">
+           <number>-1</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="statusLabel">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Status:</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QPushButton" name="searchKlingelball">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Klingelball suchen</string>
           </property>
@@ -760,6 +787,17 @@
         </item>
         <item>
          <widget class="QPushButton" name="connectKlingelball">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>40</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>18</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Klingelball verbinden</string>
           </property>
